tests/fail/assert_empty_stack.avm
; assert on an empty stack
assert int8(0)
